# ros-course-control

./: readme.md
dxl_test/: CMakeLists.txt  package.xml
dxl_test/src/: test_motors.cpp
my_robot_bringup/: package.xml
my_robot_bringup/config/: gazebo_bridge.yaml  my_robot_controllers.yaml
my_robot_bringup/launch/: my_robot.gazebo.launch.xml  my_robot.launch.py  my_robot.launch.xml
my_robot_controllers/: CMakeLists.txt  my_robot_controllers_plugin.xml  package.xml
my_robot_controllers/include/my_robot_controllers/: arm_controller.hpp
my_robot_controllers/src/: arm_controller.cpp
my_robot_description/: package.xml
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/urdf/: arm.ros2_control.xacro  arm.xacro  arm_gazebo.xacro  camera.xacro  inertial_macros.xacro  mobile_base.ros2_control.xacro  mobile_base_gazebo.xacro  my_robot.gazebo.xacro  my_robot.urdf.xacro
my_robot_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
my_robot_hardware/include/my_robot_hardware/: arm_hardware_interface.hpp  mobile_base_hardware_interface.hpp  xl330_driver.hpp
my_robot_hardware/src/: arm_hardware_interface.cpp  mobile_base_hardware_interface.cpp
